HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeMemoryOrder/Expected.uv
//! Expected diagnostic metadata for the SpeculativeMemoryOrder rejected-source specimen.

expectedDiagnostic("E-CON-0096", "requirement.19.MemoryOrderNotInsideSpeculativeBlocks")
